# gf180mcu-sram-forge

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: status-page.yml  test.yml  update-downstream.yml
chips/: gf180mcu-ic-0p5x1-sram-u8b8k.yaml  gf180mcu-ic-1x0p5-sram-u8b9k.yaml  gf180mcu-ic-1x1-sram-u8b24k.yaml
docs/plans/: 2025-12-05-sram-forge-implementation.md  2025-12-06-sram-chips-design.md  2025-12-06-sram-chips-implementation.md  2025-12-08-ic-status-aggregator-design.md  2025-12-08-ic-status-aggregator-implementation.md
docs/research/sram-datasheets/: README.md
docs/research/sram-interfaces/: classic-sram-families.md  current-3v3-srams.md  current-5v-srams.md  interface-comparison.md  (+3 more)
examples/: sram_0p5x0p5_u10b1p5k.yaml  sram_0p5x0p5_u12b1p5k.yaml  sram_0p5x0p5_u16b1p5k.yaml  sram_0p5x0p5_u8b3k.yaml  sram_0p5x1_u8b8k.yaml  sram_1x0p5_u8b9k.yaml  sram_1x1_u8b24k.yaml  sram_8k_8bit.yaml
sram_forge/: README.md  __init__.py  pyproject.toml
sram_forge/calc/: __init__.py  fit.py
sram_forge/cli/: __init__.py  main.py
sram_forge/db/: __init__.py  loader.py
sram_forge/db/data/: downstream_repos.yaml  slots.yaml  srams.yaml
sram_forge/generate/: __init__.py
sram_forge/generate/docs/: __init__.py  engine.py
sram_forge/generate/docs/templates/: README.md.j2  datasheet.md.j2  memory_map.md.j2
sram_forge/generate/librelane/: __init__.py  engine.py
sram_forge/generate/librelane/templates/: Makefile.j2  chip_top.sdc.j2  config.yaml.j2  pdn_cfg.tcl.j2
sram_forge/generate/package/: __init__.py  engine.py
sram_forge/generate/package/project_template/: .gitignore  Makefile
sram_forge/generate/package/project_template/.github/workflows/: ci.yml  slot-docs.yml
sram_forge/generate/package/project_template/scripts/: create_thumbnail.py  generate_slot_docs.py  normalize_images.py
sram_forge/generate/testbench/: __init__.py  engine.py
sram_forge/generate/testbench/templates/: Makefile.j2  chip_top_tb.py.j2  sram_model.py.j2  sram_utils.py.j2  test_control_signals.py.j2  test_sram.py.j2  test_sram_selection.py.j2
sram_forge/generate/verilog/: __init__.py  engine.py
sram_forge/generate/verilog/templates/: chip_core.sv.j2  chip_top.sv.j2  sram_array.sv.j2
sram_forge/models/: __init__.py  chip.py  downstream.py  slot.py  sram.py
sram_forge/status/: __init__.py  fetcher.py  models.py  reporter.py
sram_forge/status/templates/: status_page.html.j2
sram_forge/tests/: __init__.py  conftest.py  test_calc_fit.py  test_cli.py  test_db_loader.py  test_generate_docs.py  test_generate_librelane.py  test_generate_package.py  test_generate_testbench.py  test_generate_verilog.py  test_models_chip.py  test_models_downstream.py  test_models_slot.py  test_models_sram.py  test_status_fetcher.py  test_status_models.py  test_status_reporter.py
sram_forge/tests/fixtures/: downstream_repos.yaml  slots.yaml  srams.yaml
